--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,10 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
+        app:titleTextColor="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.ActionBarTheme"
         android:background="@color/colorPrimary" />
 
     <LinearLayout
@@ -22,11 +24,13 @@
         android:id="@+id/imageContainer">
         <ImageView
             android:id="@+id/personSnap"
+            style="@style/imageViews"
             android:layout_width="200dp"
             android:layout_height="200dp" />
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            style="@style/textViews"
             android:layout_weight="1"
             android:layout_gravity="center"
             android:text="@string/imageHelp"/>
@@ -39,6 +43,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/textViews"
             android:text="@string/enterYear"
             tools:layout_editor_absoluteX="65dp"
             tools:layout_editor_absoluteY="195dp" />
@@ -48,28 +53,28 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="number"
-            tools:layout_editor_absoluteX="56dp"
-            tools:layout_editor_absoluteY="235dp"
+            style="@style/editTexts"
             android:layout_weight="1"/>
 
         <Button
             android:id="@+id/guessButton"
+            style="@style/buttons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/guess"
-            tools:layout_editor_absoluteX="128dp"
-            tools:layout_editor_absoluteY="352dp" />
+            android:text="@string/guess"/>
     </LinearLayout>
 
     <TextView
         android:id="@+id/result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/textViews"
         android:layout_gravity="center"/>
     <TextView
         android:id="@+id/conclusion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/textViews"
         android:layout_gravity="center"/>
 
     <View android:layout_width="match_parent"
@@ -79,17 +84,15 @@
     <Button
         android:id="@+id/resetButton"
         android:layout_width="match_parent"
+        style="@style/buttons"
         android:layout_height="wrap_content"
-        android:text="@string/resetButton"
-        tools:layout_editor_absoluteX="74dp"
-        tools:layout_editor_absoluteY="235dp" />
+        android:text="@string/resetButton"/>
 
     <Button
         android:id="@+id/hackermodeButton"
+        style="@style/buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hackermode"
-        tools:layout_editor_absoluteX="81dp"
-        tools:layout_editor_absoluteY="114dp" />
+        android:text="@string/hackermode" />
 
 </LinearLayout>
